objects/pse__Task_Time__c.object
<CustomObject>
    <customHelpPage>pse__TaskTimeHelp</customHelpPage>
    <description>Records time entered against project tasks on the Time Entry page and associates project tasks with timecards.</description>
    <fields>
        <fullName>pse__Friday_Hours__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Friday Hours</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Friday_Notes__c</fullName>
        <label>Friday Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Monday_Hours__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Monday Hours</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Monday_Notes__c</fullName>
        <label>Monday Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Project_Task_Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Task Assignment</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The project task associated with the project task assignment must match the selected project task.</errorMessage>
            <filterItems>
                <field>pse__Project_Task_Assignment__c.pse__Project_Task__c</field>
                <operation>equals</operation>
                <valueField>$Source.pse__Project_Task__c</valueField>
            </filterItems>
            <infoMessage>Only project task assignments for the selected project task are shown.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>pse__Project_Task_Assignment__c</referenceTo>
        <relationshipLabel>Task Time</relationshipLabel>
        <relationshipName>Task_Time</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Project_Task__c</fullName>
        <label>Project Task</label>
        <referenceTo>pse__Project_Task__c</referenceTo>
        <relationshipLabel>Task Time</relationshipLabel>
        <relationshipName>Task_Time</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>pse__Saturday_Hours__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Saturday Hours</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Saturday_Notes__c</fullName>
        <label>Saturday Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Start_Date__c</fullName>
        <inlineHelpText>Start of the week for the related timecard.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Sunday_Hours__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Sunday Hours</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Sunday_Notes__c</fullName>
        <label>Sunday Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Thursday_Hours__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Thursday Hours</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Thursday_Notes__c</fullName>
        <label>Thursday Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Timecard__c</fullName>
        <label>Timecard</label>
        <referenceTo>pse__Timecard_Header__c</referenceTo>
        <relationshipLabel>Task Time</relationshipLabel>
        <relationshipName>Task_Time</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>pse__Total_Hours__c</fullName>
        <formula>pse__Sunday_Hours__c + pse__Monday_Hours__c + pse__Tuesday_Hours__c + pse__Wednesday_Hours__c + pse__Thursday_Hours__c + pse__Friday_Hours__c + pse__Saturday_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Tuesday_Hours__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Tuesday Hours</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Tuesday_Notes__c</fullName>
        <label>Tuesday Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Wednesday_Hours__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Wednesday Hours</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Wednesday_Notes__c</fullName>
        <label>Wednesday Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Task Time</label>
    <listViews>
        <fullName>pse__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TaskTime-{000000}</displayFormat>
        <label>Task Time Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Task Time</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>